instagram and strava updates from 2016-12-05

--- a/instagram17.html
+++ b/instagram17.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000224.jpg" title="XPac & Cordura #lovestarbicyclebags Saddlepack in a sharp looking black and grey. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>XPac & Cordura #lovestarbicyclebags Saddlepack in a sharp looking black and grey. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000224.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000225.jpg" title="Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000225.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000226.jpg" title="Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000226.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000227.jpg" title="A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000227.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000228.jpg" title="Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000228.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000651.jpg" title="Maiden voyage on the new Motobecane today. Considering I bought this bike as a cost-effective (relatively speaking of course!) straight from the internet all weather/commuter bike, I'm pleasantly surprised at how solid it is. Major kudos to @elliotlovestarbicycles for helping me assemble, lube, and adjust all the critical stuff. A few tweaks and upgrades and this will be a killer winter machine!! #lovestarfactoryteam #motobecane" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -194,71 +259,6 @@
                               <small>Another great day of racing. We are getting so spoiled with these beautiful Sundays. 9th place today. #PSIcx #lsb #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000662.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000663.jpg" title="Sigh...winter kit came out today. #cycling #lovestarfactoryteam #championsystem #bicycle #cylist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sigh...winter kit came out today. #cycling #lovestarfactoryteam #championsystem #bicycle #cylist</small>
-                           </div>
-                           <img src="../lsphotos/image000663.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000664.jpg" title="Chilly, but all smiles this morning. #lovestarfactoryteam #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Chilly, but all smiles this morning. #lovestarfactoryteam #cycling #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000664.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000665.jpg" title="Sunrise ride with the crew this morning. #lovestarfactoryteam #cycling #cylist #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride with the crew this morning. #lovestarfactoryteam #cycling #cylist #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000665.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000231.jpg" title="Shortcut. #fatbike #cycling #bikepacking #bikebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Shortcut. #fatbike #cycling #bikepacking #bikebag #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000231.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000666.jpg" title="Thanks to @lt250rrcr45 for catching this great shot at #camptonCX this past weekend. #cyclocross #cx #cycling #championsystem #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Thanks to @lt250rrcr45 for catching this great shot at #camptonCX this past weekend. #cyclocross #cx #cycling #championsystem #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000666.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
