--- a/instagram31.html
+++ b/instagram31.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000395.jpg" title="Cold ride into work for #BlackFriday . #cycling #wintercyling coldweathercycling #nobadweather #bikechi #bikecommute #layers #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold ride into work for #BlackFriday . #cycling #wintercyling coldweathercycling #nobadweather #bikechi #bikecommute #layers #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000395.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000396.jpg" title="Pre-turkey rollers. Happy Thanksgiving everyone! Earn that turkey! #turkeyride #rollers #cycling #bikechi #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pre-turkey rollers. Happy Thanksgiving everyone! Earn that turkey! #turkeyride #rollers #cycling #bikechi #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000396.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000397.jpg" title="Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000397.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000398.jpg" title="Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000398.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000399.jpg" title="Lovestar Factory Team riders before #MelasCX . It was a very Belgian course with lots of mud, rain and sand. Killer conditions, thanks to the organizers for a great race! #cyclocross #cx #chicagocrosscup #bikechi #lovestarbicyles #lovestarbicyclebags #melascx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team riders before #MelasCX . It was a very Belgian course with lots of mud, rain and sand. Killer conditions, thanks to the organizers for a great race! #cyclocross #cx #chicagocrosscup #bikechi #lovestarbicyles #lovestarbicyclebags #melascx</small>
+                           </div>
+                           <img src="../lsphotos/image000399.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000400.jpg" title="Happy Birthday to another Lovestar Factory racer in the making! I'm sure we'll see her out on the course next season!!! #lovestarfactoryteam #lovestarbicyclebags #lovestar #elliotlovestar #cyclocrosschicago #cyclocross #cycling #bikeracing" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -194,71 +259,6 @@
                               <small>Ok...I fully admit that I am addicted to accessorizing my bike kit...but it's just so good. #cycling #cyclocross #lovestarbicycles #lovestarbicyclebags #championsystem #defeet #lazersport #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000414.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000415.jpg" title="First real ride since my injury. Ride home from work. 35 degrees, dark, and 100% delightful. #bikechi #lovestarbicyclebags #lovestarbicycles #bikecommute #nightride #moots #cyclocross #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First real ride since my injury. Ride home from work. 35 degrees, dark, and 100% delightful. #bikechi #lovestarbicyclebags #lovestarbicycles #bikecommute #nightride #moots #cyclocross #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000415.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000416.jpg" title="New bike kicks! #giroempire #cycliing #cyclocross #lovestarbicycles #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>New bike kicks! #giroempire #cycliing #cyclocross #lovestarbicycles #lovestarbicyclebags #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000416.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000417.jpg" title="With cross season well underway...it's easy to forget that winter is nigh. Picked up a beater set of wheels for using on the rollers... #cycling #rollers #bikechi #ineedafatbike #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>With cross season well underway...it's easy to forget that winter is nigh. Picked up a beater set of wheels for using on the rollers... #cycling #rollers #bikechi #ineedafatbike #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000417.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000418.jpg" title="Injury means no riding...but that ha left more time for sewing. Continuing to develop the Lovestar Shop Apron. Both solid and split bottom designs, with features like: bright interior pocket colors and a built-in magnet to hold screws and other small bits while you work. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #SewRad #bikechi #madeinchicago #madeintheusa" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Injury means no riding...but that ha left more time for sewing. Continuing to develop the Lovestar Shop Apron. Both solid and split bottom designs, with features like: bright interior pocket colors and a built-in magnet to hold screws and other small bits while you work. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #SewRad #bikechi #madeinchicago #madeintheusa</small>
-                           </div>
-                           <img src="../lsphotos/image000418.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000419.jpg" title="Got a pair of wicked awesome @defeet_international gloves today...continuing to up my accessorizing game. #cyclocross #cycling #lazersport #defeet #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Got a pair of wicked awesome @defeet_international gloves today...continuing to up my accessorizing game. #cyclocross #cycling #lazersport #defeet #bikechi #lovestarbicycles #lovestarbicyclebags #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000419.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
