--- a/instagram34.html
+++ b/instagram34.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000454.jpg" title="Finished up a custom Saddle Pack. Hard to do justice to these colors in a picture...the pink, orange, white & sky blue look pretty sweet together. #handmade #lovestarbicyclebags #cycling #bikepacking #custom" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a custom Saddle Pack. Hard to do justice to these colors in a picture...the pink, orange, white & sky blue look pretty sweet together. #handmade #lovestarbicyclebags #cycling #bikepacking #custom</small>
+                           </div>
+                           <img src="../lsphotos/image000454.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000455.jpg" title="And a close-up. #lovestarbicyclebags #bikebag #bikechi #handmade #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>And a close-up. #lovestarbicyclebags #bikebag #bikechi #handmade #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000455.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000456.jpg" title="Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000456.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000457.jpg" title="The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The Lovestar Factory Team is gonna look sharp this year. #championsystems #customkit #cyclocross #cycling #cxiscoming #bikechi #chicagocrosscup #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000457.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000458.jpg" title="The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>The arrival. #customkit #cycling #cyclocross #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000458.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000459.jpg" title="Finished up this set of SaddlePacks today. Clean bold colors makes for a nice group photo. #lovestarbicyclebags #handmade #madeinchicago #cycling #bikepacking #bikebag" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>Custom Lovestar framebag in the works...lots of orange! #handmade #bicycle #cycling #bikechi #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000473.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000474.jpg" title="Set up a temporary workspace on vacation. Cranked out this lime-green & black Saddle Pack tonight. #lovestarbicyclebags #cycling #handmade #bicycle #bikechi #singersewingmachines #vacationprojects" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Set up a temporary workspace on vacation. Cranked out this lime-green & black Saddle Pack tonight. #lovestarbicyclebags #cycling #handmade #bicycle #bikechi #singersewingmachines #vacationprojects</small>
-                           </div>
-                           <img src="../lsphotos/image000474.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000475.jpg" title="There's more than one way to prove how much you've been riding. #cycling #bikechi #lovestarbicyclebags #coffeerides" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>There's more than one way to prove how much you've been riding. #cycling #bikechi #lovestarbicyclebags #coffeerides</small>
-                           </div>
-                           <img src="../lsphotos/image000475.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000476.jpg" title="Coming soon to the streets of Chicagoland. #bikechi #cycling #championsystems #lovestarbicyclebags #customkit #styles4miles" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Coming soon to the streets of Chicagoland. #bikechi #cycling #championsystems #lovestarbicyclebags #customkit #styles4miles</small>
-                           </div>
-                           <img src="../lsphotos/image000476.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000477.jpg" title="Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Judson to cemetery, solo to Illinois Beach State Park & then on to the in-laws in Winthrop Harbor. #lakemichigan #cycling #bikechi #lovestarbicyclebags #bmc #slx01 #lazer #smithoptics #illinoisbeachstatepark</small>
-                           </div>
-                           <img src="../lsphotos/image000477.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000478.jpg" title="So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>So much good in this post ride picture. #belgian #waffles #moots #springflowers #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000478.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
