--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000597.jpg" title="Thanks to @theandyhudson for snapping this pic of me while we crushed 62 mi of gravel at the Barry Roubaix #lovestarfactoryteam #barryroubaix" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Thanks to @theandyhudson for snapping this pic of me while we crushed 62 mi of gravel at the Barry Roubaix #lovestarfactoryteam #barryroubaix</small>
+                           </div>
+                           <img src="../lsphotos/image000597.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000598.jpg" title="Quick photo op at mile 50 w/ my suffer-partner @agonz21 #BarryRoubaix #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Quick photo op at mile 50 w/ my suffer-partner @agonz21 #BarryRoubaix #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000598.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000599.jpg" title="Amazing crew at #barryroubaix today. #lovestarfactoryteam #gravelgrinder #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Amazing crew at #barryroubaix today. #lovestarfactoryteam #gravelgrinder #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000599.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000600.jpg" title="Successful #barryroubaix 2016! #lovestarfactoryteam fielded 8 riders who spend the day crushing some hot dry and dusty gravel. #gravelgrinder #moots #bicycle #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Successful #barryroubaix 2016! #lovestarfactoryteam fielded 8 riders who spend the day crushing some hot dry and dusty gravel. #gravelgrinder #moots #bicycle #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000600.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000601.jpg" title="Ready to rock! #barryroubaix #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Ready to rock! #barryroubaix #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000601.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000602.jpg" title="Hotel room gear staging for #barryroubaix tomorrow. #cycling #gravelgrinder #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>I guess deep down, I kept hoping them at the forecasts for snow and freezing rain were all a big April fools gag. #cycling #bikechi #bicycle #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000609.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000610.jpg" title="Sometimes the group ride is just as fun when it's just two peeps.  #lovestarfactoryteam #myparlee #bagelart #lsbbc" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Sometimes the group ride is just as fun when it's just two peeps.  #lovestarfactoryteam #myparlee #bagelart #lsbbc</small>
-                           </div>
-                           <img src="../lsphotos/image000610.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000148.jpg" title="Today's ride pace. #bicycle #cycling #clearybikes #lovestarbicyclebags #optoutside #outsideisfree #futurecyclist #babySNUB" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Today's ride pace. #bicycle #cycling #clearybikes #lovestarbicyclebags #optoutside #outsideisfree #futurecyclist #babySNUB</small>
-                           </div>
-                           <img src="../lsphotos/image000148.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000611.jpg" title="#tbt to @casadewaggoner leading the #lovestarfactoryteam across the finish line at last year's #Almanzo 100" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#tbt to @casadewaggoner leading the #lovestarfactoryteam across the finish line at last year's #Almanzo 100</small>
-                           </div>
-                           <img src="../lsphotos/image000611.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000612.jpg" title="Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel</small>
-                           </div>
-                           <img src="../lsphotos/image000612.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000613.jpg" title="DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>DPRT with this guy. #lovestarfactoryteam #cycling #gravelgrinder</small>
-                           </div>
-                           <img src="../lsphotos/image000613.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
