--- a/instagram13.html
+++ b/instagram13.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000626.jpg" title="45mph winds and white out blizzard conditions...time for a fat bike beach ride. #fatbike #cycling #bikewinter #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>45mph winds and white out blizzard conditions...time for a fat bike beach ride. #fatbike #cycling #bikewinter #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000626.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000172.jpg" title="Finished up a custom #lovestarbicyclebags shop apron in a very classy Black & Burgundy. Hanging top pocket keeps things from falling when you stoop over, small sewn-in magnet allows for quick storage of bolts and small tools while working and wide shoulder straps keeps everything comfortable and where you want it. #handmade #cycling #bikemechanic #newtoolday #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a custom #lovestarbicyclebags shop apron in a very classy Black & Burgundy. Hanging top pocket keeps things from falling when you stoop over, small sewn-in magnet allows for quick storage of bolts and small tools while working and wide shoulder straps keeps everything comfortable and where you want it. #handmade #cycling #bikemechanic #newtoolday #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000172.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000627.jpg" title="Good lookin crew for a #lovestarfactoryteam sunrise ride. #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Good lookin crew for a #lovestarfactoryteam sunrise ride. #cycling #bicycle #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000627.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000628.jpg" title="Suns out guns out. #cycling #lovestarfactoryteam #theponyshop #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Suns out guns out. #cycling #lovestarfactoryteam #theponyshop #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000628.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000173.jpg" title="Such a stud...he didn't even need studded tire's. #dadjoke #fatbike #bikewinter #lovestarbicyclebags #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Such a stud...he didn't even need studded tire's. #dadjoke #fatbike #bikewinter #lovestarbicyclebags #lovestarfactoryteam #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000173.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000174.jpg" title="Fresh snow this morning with @agonz21 #fatbike #bikewinter #lovestarbicyclebags #bikepacking #bikepackingbags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -194,71 +259,6 @@
                               <small>#lakemichigan never disappoints. #fatbike #fatbikefriday #bikepackingbags #pogies #lovestarbicyclebags #cycling #bicycle #bikewinter </small>
                            </div>
                            <img src="../lsphotos/image000182.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000183.jpg" title="#fatbikefriday ride exploring some new trails. #fatbike #pogies #bikepackingbags #lovestarbicyclebags " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#fatbikefriday ride exploring some new trails. #fatbike #pogies #bikepackingbags #lovestarbicyclebags </small>
-                           </div>
-                           <img src="../lsphotos/image000183.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000184.jpg" title="Commute. #bikewinter #fatbike #pogies #bikepackingbags #lovestarbicyclebags #bikecommute " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Commute. #bikewinter #fatbike #pogies #bikepackingbags #lovestarbicyclebags #bikecommute </small>
-                           </div>
-                           <img src="../lsphotos/image000184.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000185.jpg" title="It may have been a coincidence...but I was the only one not running studded tire's tonight...and I was the only one who crashed twice before even getting to the trailhead. Sitting at home looking at studded tire's online...#fatbike #bikewinter #bikepackingbags #bikepacking #pogies #lovestarbicyclebags " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It may have been a coincidence...but I was the only one not running studded tire's tonight...and I was the only one who crashed twice before even getting to the trailhead. Sitting at home looking at studded tire's online...#fatbike #bikewinter #bikepackingbags #bikepacking #pogies #lovestarbicyclebags </small>
-                           </div>
-                           <img src="../lsphotos/image000185.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000186.jpg" title="Testing begins... #pogies #handmade #lovestarbicyclebags #fatbike #bikewinter #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Testing begins... #pogies #handmade #lovestarbicyclebags #fatbike #bikewinter #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000186.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000187.jpg" title="Couldn't resist a Daddy / Daughter #pogies shot. #handmade #bikewinter #fatbike #lovestarbicyclebags #SewRad " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Couldn't resist a Daddy / Daughter #pogies shot. #handmade #bikewinter #fatbike #lovestarbicyclebags #SewRad </small>
-                           </div>
-                           <img src="../lsphotos/image000187.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
