--- a/instagram2.html
+++ b/instagram2.html
@@ -6,6 +6,71 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000027.jpg" title="Bikes, barriers, and burrs, oh my! #cyclocross #lovestarraceclub #evanston" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Bikes, barriers, and burrs, oh my! #cyclocross #lovestarraceclub #evanston</small>
+                           </div>
+                           <img src="../lsphotos/image000027.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000028.jpg" title="Cold, wet and windy ride this morning. Recovering with coffee and the smiling faces of the #LovestarRaceClub crew. #bicycle #cycling #bikechi #coffeeride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold, wet and windy ride this morning. Recovering with coffee and the smiling faces of the #LovestarRaceClub crew. #bicycle #cycling #bikechi #coffeeride</small>
+                           </div>
+                           <img src="../lsphotos/image000028.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000092.jpg" title="Finished up this slick #LovestarBicycleBags shop apron. Lots of great features, heavy duty materials, and handmade construction...🚲🛠🔩⚙ #handmade #shoplife #bicycle #cycling #bikemechanic #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this slick #LovestarBicycleBags shop apron. Lots of great features, heavy duty materials, and handmade construction...🚲🛠🔩⚙ #handmade #shoplife #bicycle #cycling #bikemechanic #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000092.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000093.jpg" title="Custom #LovestarBicycleBags shop apron on the sewing table right now. Really digging the color combo. #handmade #bikemechanic #cycling #bicycle #shoplife #realmenwearaprons #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #LovestarBicycleBags shop apron on the sewing table right now. Really digging the color combo. #handmade #bikemechanic #cycling #bicycle #shoplife #realmenwearaprons #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000093.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000009.jpg" title="Just two dudes on a bike ride. Eli rocking that #lovestarraceclub 2.0 kit. Also he legit brought a wrench with him in one of his jersey pockets and stopped several times to &quot;fix&quot; his bike." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Just two dudes on a bike ride. Eli rocking that #lovestarraceclub 2.0 kit. Also he legit brought a wrench with him in one of his jersey pockets and stopped several times to "fix" his bike.</small>
+                           </div>
+                           <img src="../lsphotos/image000009.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000029.jpg" title="Lovestar WI edition to Cedarburg with bonus #leafpeeping #myparlee #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -194,71 +259,6 @@
                               <small>#LovestarRaceClub warmups at Chicago cross cup #3 #drwcx #chicagocrosscup #cycling #cyclocross #cx #bicycle</small>
                            </div>
                            <img src="../lsphotos/image000040.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000041.jpg" title="Skills & drills. #cyclocross #cx #bicycle #cycling #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Skills & drills. #cyclocross #cx #bicycle #cycling #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000041.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000042.jpg" title="Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere</small>
-                           </div>
-                           <img src="../lsphotos/image000042.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000097.jpg" title="Black & Lime #LovestarBicycleBags SaddlePack was today's project while the kids were napping. #dadlife #handmade #bicyclebag #cycling #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Black & Lime #LovestarBicycleBags SaddlePack was today's project while the kids were napping. #dadlife #handmade #bicyclebag #cycling #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000097.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000043.jpg" title="Fall sunrise ride #cycling #bicycle #lakeMichigan #ridecannondale #bikechi #coffeeride #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fall sunrise ride #cycling #bicycle #lakeMichigan #ridecannondale #bikechi #coffeeride #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000043.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000044.jpg" title="Great lineup. #LovestarRaceClub #thePonyShop #ridecannondale" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Great lineup. #LovestarRaceClub #thePonyShop #ridecannondale</small>
-                           </div>
-                           <img src="../lsphotos/image000044.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
